--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,80 @@
-.App {
+.app-container {
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 20px;
+  font-family: Arial, sans-serif;
+  
+}
+
+.app-title {
   text-align: center;
+  color: #333;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.email-section {
+  margin-top: 20px;
+  
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+ul {
+  padding-left: 20px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+textarea {
+  width: 95%;
+  height: 100px;
+  margin-bottom: 10px;
+  padding: 10px;
+  font-size: 16px;
+  border-radius: 20px;
+  background-color: bisque;
+  font-weight: bold;
+  box-shadow: brown 5px 6px 8px;
+
 }
 
-.App-link {
-  color: #61dafb;
+
+/* Style for the first button */
+button {
+  margin: 2px 0 10px 25px;
+  padding: 10px 20px 16px;
+  background-color: #007bff;
+  color: rgb(5, 0, 0);
+  border: none;
+  cursor: pointer;
+  border-radius: 30px;
+  font-weight: bold;
+  box-shadow: brown 3px 4px 6px;
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button:hover {
+  background-color: #0056b3;
+  border-radius: 10px;
+}
+
+/* Style for the second button */
+.send-button {
+  margin-top: 10px; /* Add margin between buttons */
+  padding: 12px 24px 16px;
+  background-color: #28a745;
+  border-radius: 10px;
+  color: aliceblue;
+  box-shadow: brown 3px 4px 6px;
+
+}
+
+.send-button:hover {
+  background-color: #218838;
+  border-radius: 30px;
+}
+.design{
+  margin-left: 18%;
+  margin-right: 18%;
+  background-color: burlywood;
+  border-radius: 2%;
+  box-shadow: brown 5px 6px 8px;
+}
+.ml{
+  margin-left: 8px;
 }
